[package]
name = "rusteze"
version = "0.0.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.44"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
